Bug 1192539 - [1.3] Add MediaCodecList JNI query support. r=snorp, a=sylvestre

--HG--
extra : source : 0fa9ed048fbefe9aaf1b8f4449cd35da88a8cdc1
extra : intermediate-source : 92255a6c239b303e6208291ab165e6d60a5f223d